[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Images/ra dead.png" type="Texture" id=1]
[ext_resource path="res://Ra boss.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/ra default.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/explode.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/ra fireball.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/thank you.png" type="Texture" id=6]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=7]
[ext_resource path="res://Assets/sounds/Goose theme.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70, 160.5 )

[sub_resource type="Environment" id=3]
background_mode = 4
glow_intensity = 2.46

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "fireball",
"speed": 5.0
} ]

[sub_resource type="QuadMesh" id=5]

[node name="Ra boss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2( 7, -1.5 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="ra" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="Credits" type="StaticBody2D" parent="CanvasLayer"]

[node name="MeshInstance2D" type="MeshInstance2D" parent="CanvasLayer/Credits"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 563.5, 322.5 )
scale = Vector2( 1155, 667 )
mesh = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Credits"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 504.5, 293.5 )
scale = Vector2( 1.037, 1.218 )
texture = ExtResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource( 8 )

[node name="death timer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="death timer" to="." method="_on_death_timer_timeout"]
